--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <head>
+  <meta charset="utf-8"/>
 </head>
 <body>
   
@@ -9,86 +10,51 @@
   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 
 
-  <!--座標ファイル、ポリゴンインデックスファイルの読み込み-->
-  <script src="cubevts0.js"></script>
-  <script src="cubeindex0.js"></script>
-  <script src="cubevtsa1_c.js"></script>
-  <script src="cubeindexa1.js"></script>
-  <script src="cubevtsa2.js"></script>
-  <script src="cubeindexa2_c.js"></script>
-  <script src="cubevtsa3_c.js"></script>
-  <script src="vtsstring1.js"></script>
-  <script src="index1.js"></script>
-  <script src="planes1.js"></script>
-  <script src="planes2.js"></script>
-
-  <script src="spherevts.js"></script>
-  <script src="sphereindex.js"></script>
-
   <!--座標ファイルに含まれる変数（パラメータ）を宣言-->
   <script>
-    var r,l,para1;
+    var r, l, para1;
   </script>
 
   <!--メインプログラム-->
   <script src="script7.js"></script>
 
   <!--キャンバスの追加-->
-  <p>球１</p>
-  <script>
-    let myscenes = new IScene();
-    myscenes.IaddAnimeObject('spherevts.txt', 'sphereindex.txt', {scale:0.6, material:'normal'});
-  </script>
-
-  <p>図４</p>
-  <script>
-    let myscene2 = new IScene();
-    myscene2.IaddAnimeObject('cubevtsa1_c.txt', 'cubeindexa1.txt');
-  </script>
-  
-  <!-- <p>球２</p>
-  <script>
-    let myscene0 = new IScene();
-    myscene0.IaddAnimeObject(spherevts, sphereindex);
-  </script>
 
   <p>図１</p>
   <script>
-    let myscene7 = new IScene();
-    myscene7.IaddSlider('l',{min:100, max:200});
-    myscene7.IaddSlider('r',{min:30, max:60});
-    myscene7.IaddObject(vtsstring1, index1, {scale:2});
+    let myscene1 = new IScene();
+    myscene1.IaddAnimeObject('cubevts.txt','cubeindex.txt');
   </script>
 
   <p>図２</p>
   <script>
-    let myscene8 = new IScene();
-    myscene8.IaddSlider('l',{min:100, max:200});
-    myscene8.IaddSlider('r',{min:30, max:60});
-    myscene8.IaddSlider('para1',{min:10, max:200});
-    myscene8.IaddObject(vtsstring1, index1);
-    myscene8.IaddCuttingPlanes(planes2);
+    let myscene2 = new IScene();
+    myscene2.IaddAnimeObject('cubevts.txt','cubeindex.txt',{scale:1.5, material:'normal'});
   </script>
 
   <p>図３</p>
   <script>
-    let myscene1 = new IScene();
-    myscene1.IaddAnimeObject(cubevts0, cubeindex0);
+    let myscene3 = new IScene();
+    myscene3.IaddAnimeObject('cubevts1.txt','cubeindex1.txt');
   </script>
 
-  <p>図５</p>
+  <p>図４</p>
   <script>
-    let myscene3 = new IScene();
-    myscene3.IaddAnimeObject(cubevtsa2, cubeindexa2_c);
-  </script>
-  
-  <p>図６</p>
+    let myscene4 = new IScene();
+    myscene4.IaddSlider('l',{min:100, max:200});
+    myscene4.IaddSlider('r',{min:30, max:60});
+    myscene4.IaddObject('torusvts1.txt', 'torusindex1.txt');
+  </script>  
+
+  <!-- <p>図５</p>
   <script>
-    let myscene4 = new IScene({projection:'ortho'});
-    myscene4.IaddAnimeObject(cubevtsa2, cubeindexa2_c);
-    myscene4.IaddAnimeObject(cubevtsa3_c, cubeindexa1);
+    let myscene5 = new IScene();
+    myscene5.IaddSlider('l',{min:100, max:200});
+    myscene5.IaddSlider('r',{min:30, max:60});
+    myscene5.IaddSlider('para1',{min:10, max:200});
+    myscene5.IaddObject('torusvts1.txt', 'torusindex1.txt');
+    myscene5.IaddCuttingPlanes('cutplane.txt');
   </script> -->
-  
 
 </body>
 
