--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
   <p>図１</p>
   <script>
     let myscene1 = new IScene();
-    myscene1.IaddAnimeObject('cubevts.txt','cubeindex.txt');
+    myscene1.IaddAnimeObject('cubevts.txt','cubeindex.txt',{scale:2});
   </script>
 
-  <p>図２</p>
+  <!-- <p>図２</p>
   <script>
     let myscene2 = new IScene();
     myscene2.IaddAnimeObject('cubevts.txt','cubeindex.txt',{scale:1.5, material:'normal'});
@@ -44,7 +44,7 @@
     myscene4.IaddSlider('l',{min:100, max:200});
     myscene4.IaddSlider('r',{min:30, max:60});
     myscene4.IaddObject('torusvts1.txt', 'torusindex1.txt');
-  </script> 
+  </script>  -->
 
   <!-- <p>図５</p>
   <script>
